--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "main": "src/scanner/main.js",
+  "scripts": {
+    "start": "electron ."
+  },
   "dependencies": {
+    "electron": "^3.0.10",
     "jsqr": "^1.1.1",
+    "materialize-css": "^1.0.0",
     "qrcode-svg": "^1.0.0"
   }
 }
