--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "electron": "^3.0.10",
+    "form-serialize": "^0.7.2",
     "jsqr": "^1.1.1",
     "materialize-css": "^1.0.0",
     "qrcode-svg": "^1.0.0"
