--- a/pdb/ssebtrtfnx.json
+++ b/pdb/ssebtrtfnx.json
@@ -1,1 +1,1 @@
-{"serial": "ssebtrtfnx", "identifier": "klang"}
+{"serial":"ssebtrtfnx","identifier":"klang","events":[{"name":"shipped","time":"2019-06-05T15:00:00.000Z","data":{"technician":"Rune Warhuus","to":"Control","courier":"DHL","tracking-number":"8331210510"}}]}
